feat: prepare for gh pages deployment

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Danivation</title>
   </head>
   <body>
+    <noscript>
+      <p>This site requires JavaScript, which is not supported in this browser.</p>
+    </noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
